@@ -1,7 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-AUTOMAKE_OPTIONS = no-dependencies
-
 INCLUDES = -I$(top_srcdir)/common -I$(top_srcdir)/include -I${srcdir}/..
 
 noinst_LTLIBRARIES = libspanish.la
